# SwarmReservoir3_0_20260622

./: .gitignore  ARCHITECTURE.md  README.md  pyproject.toml  requirements.txt
config/: global.yaml  stage1_generate.yaml  stage2_experiment.yaml  stage3_extract.yaml  stage4_benchmark.yaml
scripts/: run_all.py  run_stage1.py  run_stage2.py  run_stage3.py  run_stage4.py  test_stage3_step.py  verify_stage3.py
src/common/: config.py  constants.py  io_utils.py  logging_utils.py
src/stage1_generate/: pipeline.py  quantization.py  signal_generator.py
src/stage1_generate/strategies/: base.py  binary_sequence.py  discrete_set.py  sinusoidal.py  uniform_random.py
src/stage2_experiment/: experiment.py  pipeline.py  ui.py
src/stage2_experiment/hardware/: base_power_supply.py  camera.py  power_supply.py
src/stage2_experiment/hardware/lib/: CameraParams_header.py  MvCameraControl_class.py
src/stage3_extract/: pipeline.py
src/stage3_extract/detection/: circle_detector.py
src/stage3_extract/features/: __init__.py  base.py  distribution.py  entropy.py  neighbor_spacing.py  system_radius.py  velocity.py
src/stage3_extract/preprocessing/: find_center.py  mask.py
src/stage3_extract/verification/: grid_search.py  single_image_viewer.py
src/stage4_benchmark/: evaluation.py  pipeline.py  preprocessing.py
src/stage4_benchmark/benchmarks/: base.py  memory_capacity.py
tests/test_stage1/: test_signal_generator.py
tests/test_stage3/: test_features.py  test_preprocessing.py
tests/test_stage4/: test_memory_capacity.py  test_preprocessing.py
