[project]
name = "swarm-reservoir"
version = "3.0.0"
description = "Swarm Reservoir Computing research framework"
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.21.0,<2.0.0",
    "pandas>=1.3.0",
    "opencv-python>=4.5.0",
    "scipy>=1.7.0",
    "scikit-learn>=1.0.0",
    "matplotlib>=3.4.0",
    "pyyaml>=5.4.0",
    "pyqt5>=5.15.0",
    "pyserial>=3.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=3.0.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}
